--- a/ci/linux/build
+++ b/ci/linux/build
@@ -3,6 +3,7 @@ set -x
 
 export GDK_BACKEND=x11
 
+sudo apt-get update
 sudo apt-get install clang git ladspa-sdk freeglut3-dev g++ libasound2-dev libcurl4-openssl-dev libfreetype6-dev libjack-jackd2-dev libx11-dev libxcomposite-dev libxcursor-dev libxinerama-dev libxrandr-dev mesa-common-dev webkit2gtk-4.0 juce-tools
 
 ROOT=$(cd "$(dirname "$0")/../.."; pwd)
